<?xml version="1.0"?>
<package format="2">
  <name>tortoisebot_waypoints</name>
  <version>0.1.0</version>
  <description>The tortoisebot_waypoints package</description>
  <maintainer email="chatzialex@yahoo.gr">Alexandros Chatzikyriakos</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <test_depend>tortoisebot_gazebo</test_depend>

  <export>
  </export>
</package>
